# wall-street-quants-course-project

./: .gitignore  ClassProject.md  PROGRESS.md  README.md  pyproject.toml
src/wall_street_quants_course_project/: models.py  strats.py
src/wall_street_quants_course_project/analysis/: 20260616__umd_variations.ipynb  20260620__explore_volume.ipynb  20260622__explore_shorter_term_strategies.ipynb
